Beginnings of list editor implementation and list favoriting

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -110,6 +110,7 @@
 
   <script src="static/app/focus/DatesController.js"></script>
 
+  <script src="static/app/lists/ListEditorController.js"></script>
   <script src="static/app/lists/ListsController.js"></script>
   <script src="static/app/lists/ListsService.js"></script>
 
