--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -2,7 +2,7 @@
   <div class="group-mixed--left">
     <a href ng-click="changeFeature('list', list)">&lt;</a>
   </div>
-  <a href class="group-mixed--middle" swiper-click="changeFeature('list', list)">
+  <a href class="group-mixed--middle" swiper-click="changeFeature('list', list, true)">
     <span class="text-link" ng-bind="list.title"></span>
   </a>
 </div>
