--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -22,26 +22,26 @@
 
     <div ng-if="isFeatureActive('list')" class="group-mixed">
       <div class="group-mixed--middle">
-        <a href class="link-menu highlighted">
+        <a href class="link-menu highlighted" ng-click="gotoFeature('list', getActiveList())">
           <span class="text-navigation-menu-small" ng-bind="getActiveList().title"></span>
         </a>
       </div>
       <div class="group-mixed--right">
         <a href ng-if="isFavoriteList(getActiveList())" ng-click="unfavoriteList(getActiveList())">
-          <span class="text-favorite inverse"></span>
+          <span class="text-star small inverse"></span>
         </a>
       </div>
     </div>
     <div ng-if="favoriteLists.length > 0" class="group-mixed" ng-repeat="favoriteList in favoriteLists"
     ng-hide="favoriteList === getActiveList()">
       <div class="group-mixed--middle">
-        <a href class="link-menu">
+        <a href class="link-menu" ng-click="gotoFeature('list', favoriteList)">
           <span class="text-navigation-menu-small" ng-bind="favoriteList.title"></span>
         </a>
       </div>
       <div class="group-mixed--right">
         <a href ng-click="unfavoriteList(list)">
-          <span class="text-favorite inverse"></span>
+          <span class="text-star small inverse"></span>
         </a>
       </div>
     </div>
