--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -1,9 +1,13 @@
-<div class="container-toolbar--inner">
-  <div ng-hide="isCustomToolbar()" class="swiper-no-swiping group-symmetrical height-large" ng-controller="ToolbarController">
+<div class="container-toolbar--inner" ng-controller="ToolbarController">
+  <div ng-hide="isCustomToolbar()" class="swiper-no-swiping group-symmetrical height-large">
     <button class="group-symmetrical--left btn" type="button" ng-click="toggleMenu()" alt="menu">
       <span class="text-menu"></span>
     </button>
-    <a href class="group-symmetrical--middle" ng-click="switchFeature()" ng-bind="getCurrentHeading()"></a>
+    <div class="group-symmetrical--middle" ng-style="{maxWidth: calculateHeadingWidth()}">
+      <a href ng-click="clickToolbarHeading()">
+        <span class="text-heading-primary" ng-bind="getCurrentHeading()"></span>
+      </a>
+    </div>
     <button class="group-symmetrical--right btn" ng-click="openEditor('omnibar')">
       <span class="text-logo"></span>
     </button>
@@ -12,8 +16,10 @@
     <a href class="group-symmetrical--left link-navigation highlighted" ng-click="customToolbar.leftActionFn()">
       <span class="text-navigation" ng-bind="customToolbar.leftActionName"></span>
     </a>
-    <div class="group-symmetrical--middle width-large" ng-click="customToolbar.middleActionFn()">
-      <span class="text-heading-primary" ng-bind="customToolbar.getMiddleActionName()"></span>
+    <div class="group-symmetrical--middle width-large">
+      <a href ng-click="customToolbar.middleActionFn()">
+        <span class="text-heading-primary" ng-bind="customToolbar.getMiddleActionName()"></span>
+      </a>
     </div>
     <a href class="group-symmetrical--right link-navigation highlighted" ng-click="customToolbar.rightActionFn()">
       <span class="text-navigation" ng-bind="customToolbar.rightActionName"></span>
