--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -56,9 +56,11 @@
 
         <footer class="container-content--after editor-footer" editor-footer>
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
-            <a href ng-if="task.transientProperties.date" class="group-symmetrical--middle" ng-click="toggleExpand()">
-              <span>later</span>
-            </a>
+            <div class="group-symmetrical--middle">
+            <a href ng-if="task.transientProperties.date" ng-click="toggleExpand()">
+                <span class="text-move"></span>
+              </a>
+            </div>
             <a href ng-click="swipeToAdvanced()" class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
             </a>
