inbox items padding fixed (wrong container)

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -2,16 +2,14 @@
   <section class="container-content" list>
     <h2 class="group-heading row" ng-bind="items.length + ' items'"></h2>
 
-    <div list-item-add="{}" list-item-add-save="saveItem(newItem)">
-      <form role="form" class="group-mixed" ng-submit="callAndExit(saveItem, newItem)"
+    <div class="row" list-item-add="{}" list-item-add-save="saveItem(newItem)">
+      <form role="form" ng-submit="callAndExit(saveItem, newItem)"
       data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
       editable-field-container-clicked-elsewhere="clickedElsewhere()">
-        <div class="group-mixed--middle">
           <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
           editable-field editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)"
           placeholder="add item&#8230;" maxlength="128">
           </textarea>
-        </div>
         <div class="group-mixed--right">
           <a href editable-field-deactivate ng-click="openEditor('item', newItem)">&gt;</a>
         </div>
@@ -21,7 +19,7 @@
     <div class="animate-list-item-leave"
     ng-repeat="item in items | orderBy:'created':true | limitTo: currentListLimitTo"
     list-item="items.length">
-      <div class="group-mixed">
+      <div class="row">
         <a href class="group-mixed--middle" swiper-click="openEditor('item', newItem)">
           <span class="text-link" ng-bind="item.title"></span>
         </a>
