added missing trash icon to note editor

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -7,7 +7,7 @@
           </a>
         </a>
         <div class="group-symmetrical--right">
-          <a href ng-click="deleteNoteInEdit()">delete</a>
+          <a href ng-click="deleteNoteInEdit()"><span class="text-trash"></span></a>
         </div>
       </div>
 
