--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -77,6 +77,7 @@
   <script src="static/app/base/drawerDirective.js"></script>
   <script src="static/app/base/drawerHandleDirective.js"></script>
   <script src="static/app/base/drawerOverrideAisleDirective.js"></script>
+  <script src="static/app/base/dropDownListDirective.js"></script>
   <script src="static/app/base/editorFooterDirective.js"></script>
   <script src="static/app/base/laterDirective.js"></script>
   <script src="static/app/base/listContainerDirective.js"></script>
