--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -1,5 +1,5 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
-  <section class="container-content" list="top" list-open="openEditor('note', {})">
+  <section class="container-content" list="allNotes" list-order="top" list-open="openEditor('note', {})">
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
         <h2>recent</h2>
