--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -241,7 +241,8 @@
       <div class="swiper-wrapper">
 
         <div class="swiper-slide" swiper-slide="focus/tasks/rightDuplicate" slide-index="0" swiper-slide-duplicate="true">
-          <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate">
+          <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
+          list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-order="top">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -251,20 +252,22 @@
                 <div class="group-mixed--right" task-list-completed="rightDuplicateTasksDate"></div>
               </div>
 
-              <div class="animate-list-item-leave"
-              ng-repeat="task in rightDuplicateTasks = (getList() | paramFilter:isListItemVisible:daySlides[2].pastDate)
-              | limitTo: currentListLimitTo"
-              list-item="rightDuplicateTasks.length" list-item-array
-              ng-include="'static/app/tasks/taskListItem.html'"></div>
-
               <div list-item-add="getNewDayTask(2)" list-item-add-save="saveTask(newItem)"
               ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              <div class="animate-list-item-leave"
+              ng-repeat="task in rightDuplicateTasks = (getList()
+              | paramFilter:isListItemVisible:daySlides[2].pastDate)
+              | orderBy:'created':true
+              | limitTo: currentListLimitTo"
+              list-item="rightDuplicateTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
             </div>
           </div>
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
-          <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate">
+          <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
+          list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-order="top">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -274,20 +277,23 @@
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
 
-              <div class="animate-list-item-leave"
-              ng-repeat="task in leftTasks = (getList() | paramFilter:isListItemVisible:daySlides[0].pastDate)
-              | limitTo: currentListLimitTo"
-              list-item="leftTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
-
               <div list-item-add="getNewDayTask(0)" list-item-add-save="saveTask(newItem)"
               ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              <div class="animate-list-item-leave"
+              ng-repeat="task in leftTasks = (getList()
+              | paramFilter:isListItemVisible:daySlides[0].pastDate)
+              | orderBy:'created':true
+              | limitTo: currentListLimitTo"
+              list-item="leftTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
 
             </div>
           </div>
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
-          <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[1].info:daySlides[1].pastDate">
+          <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'"
+          list="tasks | tasksByDate:daySlides[1].info:daySlides[1].pastDate" list-order="top">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -297,20 +303,23 @@
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
 
-              <div class="animate-list-item-leave"
-              ng-repeat="task in middleTasks = (getList() | paramFilter:isListItemVisible:daySlides[1].pastDate)
-              | limitTo: currentListLimitTo"
-              list-item="middleTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
-
               <div list-item-add="getNewDayTask(1)" list-item-add-save="saveTask(newItem)"
               ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              <div class="animate-list-item-leave"
+              ng-repeat="task in middleTasks = (getList()
+              | paramFilter:isListItemVisible:daySlides[1].pastDate)
+              | orderBy:'created':true
+              | limitTo: currentListLimitTo"
+              list-item="middleTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
 
             </div>
           </div>
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
-          <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate">
+          <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
+          list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-order="top">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -320,19 +329,23 @@
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
 
-              <div class="animate-list-item-leave"
-              ng-repeat="task in rightTasks = (getList() | paramFilter:isListItemVisible:daySlides[2].pastDate)
-              | limitTo: currentListLimitTo"
-              list-item="rightTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
-
               <div list-item-add="getNewDayTask(2)" list-item-add-save="saveTask(newItem)"
               ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              <div class="animate-list-item-leave"
+              ng-repeat="task in rightTasks = (getList()
+              | paramFilter:isListItemVisible:daySlides[2].pastDate)
+              | orderBy:'created':true
+              | limitTo: currentListLimitTo"
+              list-item="rightTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+
             </div>
           </div>
         </div>
 
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
-          <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'" list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate">
+          <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
+          list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-order="top">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -342,13 +355,16 @@
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
 
-              <div class="animate-list-item-leave"
-              ng-repeat="task in leftDuplicateTasks = (getList() | paramFilter:isListItemVisible:daySlides[0].pastDate)
-              | limitTo: currentListLimitTo"
-              list-item="leftDuplicateTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
-
               <div list-item-add="getNewDayTask(0)" list-item-add-save="saveTask(newItem)"
               ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              <div class="animate-list-item-leave"
+              ng-repeat="task in leftDuplicateTasks = (getList()
+              | paramFilter:isListItemVisible:daySlides[0].pastDate)
+              | orderBy:'created':true
+              | limitTo: currentListLimitTo"
+              list-item="leftDuplicateTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
+
             </div>
           </div>
         </div>
