Added provisional support for line clamping using clamp.js

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -32,6 +32,7 @@
 
   <script src="static/lib/base64.js"></script>
   <script src="static/lib/elastic.js"></script>
+  <script src="static/lib/clamp.js"></script>
 
   <script src="static/common/common.js"></script>
   <script src="static/common/DateService.js"></script>
@@ -65,6 +66,7 @@
   <script src="static/app/base/ArrayService.js"></script>
   <script src="static/app/base/AuthenticationService.js"></script>
   <script src="static/app/base/BackendClientService.js"></script>
+  <script src="static/app/base/clampDirective.js"></script>
   <script src="static/app/base/DrawerService.js"></script>
   <script src="static/app/base/ModalService.js"></script>
   <script src="static/app/base/SwiperService.js"></script>
