Added list-recent to indicate that after save scrolling to top is the right thing to do

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -36,7 +36,7 @@
               </div>
             </div>
           </div-->
-          <textarea class="row" ng-model="note.transientProperties.content" msd-elastic placeholder="enter content&#8230;" ></textarea>
+          <textarea class="row" ng-model="note.content" msd-elastic placeholder="enter content&#8230;" ></textarea>
         </div>
         <footer class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
