--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -5,6 +5,6 @@
     </a>
   </div>
 </div>
-<div class="row">
+<a href class="link-teaser row" swiper-click="callAndWaitThenScroll(openNoteEditorView, note)">
   <span class="text-teaser" ng-bind="getNoteContentTeaser(note)"></span>
-</div>
+</a>
