--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container drawer-handle="left">
-  <section class="container-content" list="allActiveTasks" list-order="top" swiper-prevent>
+  <section class="container-content" list="allActiveTasks" list-order="top" list-recent swiper-prevent>
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
         <h2>recent</h2>
