Fixed missing $ symbol, fixed wrong delete function name

--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -5,7 +5,7 @@
         <a href class="group-symmetrical--left link-navigation highlighted">
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-click="endTaskEdit()" ng-bind="titlebarHasText() ? 'save' : 'back'"></span>
         </a>
-        <a href class="group-symmetrical--right" ng-click="deleteItemInEdit()" >
+        <a href class="group-symmetrical--right" ng-click="deleteTaskInEdit()" >
           <span class="text-trash"></span>
         </a>
       </div>
