--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -34,14 +34,14 @@
             </div>
           </div>
 
-          <div ng-if="dropDownListOpen" class="swiper-no-swiping animate-calendar" editable-field-container="auto" editable-field-container-clicked-elsewhere="closeDropDownList()" data-snap-ignore="true">
-            <div drop-down-list="lists" drop-down-list-save="closeDropDownListAndSetListToItem(task, listUUID)" drop-down-list-clear="closeDropDownListAndClearListFromItem(task, listUUID)" drop-down-list-get-selected="getListFromUUID(task.transientProperties.list)"></div>
+          <div ng-if="listPickerOpen" class="swiper-no-swiping animate-calendar" editable-field-container="auto" editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
+            <div list-picker="lists" list-picker-save="closeListPickerAndSetListToItem(task, listUUID)" list-picker-clear="closeListPickerAndClearListFromItem(task, listUUID)" list-picker-get-selected="getListFromUUID(task.transientProperties.list)"></div>
           </div>
 
-          <div ng-if="!calendarOpen && !dropDownListOpen">
+          <div ng-if="!calendarOpen && !listPickerOpen">
             <div class="row-form animate-calendar" ng-click="openCalendar()" ng-bind="task.transientProperties.date ? (task.transientProperties.date | date:'EEE MMM d y' | lowercase) : 'select date'"></div>
 
-            <div class="row-form" ng-click="openDropDownList()">
+            <div class="row-form" ng-click="openListPicker()">
               <span class="text-link" ng-bind="task.transientProperties.list ? getListTitleFromUUID(task.transientProperties.list) : 'select list...'"></span>
             </div>
 
