Fixed note list layout, tweaked leave animation. Delete works for task editor.

--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -5,6 +5,6 @@
     </a>
   </div>
 </div>
-<a href class="link-teaser row" swiper-click="callAndWaitThenScroll(openNoteEditorView, note)">
-  <span class="text-teaser" ng-bind="getNoteContentTeaser(note)"></span>
+<a href class="group-teaser" swiper-click="callAndWaitThenScroll(openNoteEditorView, note)">
+  <span class="text-teaser" clamp=3 ng-bind="getNoteContentTeaser(note)"></span>
 </a>
