--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -6,6 +6,6 @@
   </div>
 
   <a href class="group-mixed--middle" swiper-click="callAndWaitThenScroll(openTaskEditor, task)">
-    <span class="text-link" clamp="2" ng-bind="task.title"></span>
+    <span class="text-link" clamp=2 ng-bind="task.title"></span>
   </a>
 </div>
