--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -17,4 +17,9 @@
       <span class="text-link" ng-bind="list.title"></span>
     </a>
   </div>
+
+  <div class="row-form">
+    <textarea autocapitalize="none" autocorrect="off" ng-model="newList.title" msd-elastic ng-keydown="textareaKeyDown($event)" placeholder="add list&#8230;" maxlength="128"></textarea>
+  </div>
+
 </div>
